--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Blog</title>
+    <title>PT. SPA</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- utility css file -->
@@ -21,7 +21,7 @@
     <nav class = "navbar">
       <div class = "container">
         <div class = "brand-and-toggler">
-          <a href = "index.html" class = "navbar-brand">steve</a>
+          <a href = "index.html" class = "navbar-brand">Paintojp</a>
           <button type = "button" class = "navbar-toggler" id = "navbar-toggler">
             <span>
               <i class = "fas fa-bars"></i>
@@ -40,20 +40,20 @@
             <li class = "nav-item">
               <a href = "resume.html" class = "nav-link">resume</a>
             </li>
-            <li class = "nav-item">
-              <a href = "services.html" class = "nav-link">services</a>
+            <!-- <li class = "nav-item">
+              <a href = "services.html" class = "nav-link">services</a> -->
             </li>
             <li class = "nav-item">
               <a href = "skills.html" class = "nav-link">skills</a>
             </li>
             <li class = "nav-item">
-              <a href = "projects.html" class = "nav-link">projects</a>
+              <a href = "projects.html" class = "nav-link">experience</a>
             </li>
-            <li class = "nav-item nav-active">
-              <a href = "blog.html" class = "nav-link">blog</a>
-            </li>
-            <li class = "nav-item">
-              <a href = "contact.html" class = "nav-link">contact</a>
+           <!--  <li class = "nav-item nav-active">
+              <a href = "blog.html" class = "nav-link">PT. SPA</a>
+            </li> -->
+            <!--<li class = "nav-item">
+              <a href = "contact.html" class = "nav-link">contact</a>-->
             </li>
           </ul>
         </div>
@@ -66,72 +66,68 @@
     <!-- blog page -->
     <section class = "blog container">
       <div class = "title">
-        <h2>posts</h2>
+        <h2>Laporan</h2>
         <div>
-          <h2>my blog</h2>
+          <h2>Laporan PT. Sabaritha Perkasa Abadi</h2>
         </div>
       </div>
 
-      <p class = "text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus architecto fugit veniam ad consectetur, perferendis, voluptatum, commodi cum facere accusantium error alias ex exercitationem. Explicabo?</p>
+      <p class = "text">Berikut Adalah Laporan saya sebagai Administrasi Peralatan</p>
+
+
 
       <div class = "row">
         <div class = "item">
           <div class = "item-img">
-            <img src = "assets/blog-img-1.jpg" alt = "blog image">
+            <iframe src="https://drive.google.com/file/d/1IDUnZKnlfh3lXmbYaneuQ9IzyKbkFI7F/preview" width="340" height="480" allow="autoplay"></iframe>
           </div>
           <div class = "item-content">
-            <span>june 22, 2022 &nbsp; admin
-              <i class = "fas fa-comment-alt"></i> 3
+            <span>Kegiatan Lapangan  &nbsp; PT. SPA 2021
             </span>
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, aliquam</h2>
-            <p class = "text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, voluptas sint architecto, repellendus quae facilis eaque aperiam fugiat vel, similique necessitatibus tenetur saepe commodi repudiandae perferendis error eligendi omnis iste?</p>
-            <button type = "button" class = "btn">read more</button>
+            <p>Rangkuman Seluruh Kegiatan Armada atau Kendaraan maupun alat berat PT. Sabaritha Perkasa Abadi yang ada pada bascamp Tambusan.
+              
+            </p>
           </div>
         </div>
 
         <div class = "item">
           <div class = "item-img">
-            <img src = "assets/blog-img-2.jpg" alt = "blog image">
+            <iframe src="https://drive.google.com/file/d/1CRvk_wQltcy7sdCrCQ26pnis21RKdc-v/preview" width="340" height="480" allow="autoplay"></iframe>
           </div>
           <div class = "item-content">
-            <span>june 22, 2022 &nbsp; admin
-              <i class = "fas fa-comment-alt"></i> 3
+            <span>Personil Peralatan &nbsp; 2021
             </span>
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, aliquam</h2>
-            <p class = "text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, voluptas sint architecto, repellendus quae facilis eaque aperiam fugiat vel, similique necessitatibus tenetur saepe commodi repudiandae perferendis error eligendi omnis iste?</p>
-            <button type = "button" class = "btn">read more</button>
+             <p>Rangkuman Seluruh Anggota/Personil PT. Sabaritha Perkasa Abadi</p> 
           </div>
         </div>
 
         <div class = "item">
           <div class = "item-img">
-            <img src = "assets/blog-img-3.jpg" alt = "blog image">
+            <iframe src="https://drive.google.com/file/d/1b4rPtwZD064pyf_pkCydY6mWu_n9Zj3h/preview" width="340" height="480" allow="autoplay"></iframe>
           </div>
           <div class = "item-content">
-            <span>june 22, 2022 &nbsp; admin
-              <i class = "fas fa-comment-alt"></i> 3
+            <span>REKAP ALAT BERAT &nbsp; PT. SPA
             </span>
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, aliquam</h2>
-            <p class = "text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, voluptas sint architecto, repellendus quae facilis eaque aperiam fugiat vel, similique necessitatibus tenetur saepe commodi repudiandae perferendis error eligendi omnis iste?</p>
-            <button type = "button" class = "btn">read more</button>
+            <p>
+              Rekap seluruh peralatan alat berat atau invoice PT. Sabaritha Perkasa Abadi
+            </p>
           </div>
         </div>
 
         <div class = "item">
           <div class = "item-img">
-            <img src = "assets/blog-img-4.jpg" alt = "blog image">
+            <iframe src="https://drive.google.com/file/d/1l0K1ZuJ2dqUWSdan_IAg3AQotU9GECMC/preview" width="340" height="480" allow="autoplay"></iframe>
           </div>
           <div class = "item-content">
-            <span>june 22, 2022 &nbsp; admin
-              <i class = "fas fa-comment-alt"></i> 3
-            </span>
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, aliquam</h2>
-            <p class = "text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, voluptas sint architecto, repellendus quae facilis eaque aperiam fugiat vel, similique necessitatibus tenetur saepe commodi repudiandae perferendis error eligendi omnis iste?</p>
-            <button type = "button" class = "btn">read more</button>
+            <span>REKAP KENDARAAN &nbsp; PT. SPA</span>
+            <p>
+              Rekap Seluruh Kendaraan PT Sabaritha Perkasa Abadi
+            </p>
           </div>
         </div>
+        </div>
 
-        <div class = "item">
+        <!--<div class = "item">
           <div class = "item-img">
             <img src = "assets/blog-img-5.jpg" alt = "blog image">
           </div>
