--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
             <li class = "nav-item">
               <a href = "projects.html" class = "nav-link">experience</a>
             </li>
-            <!--<li class = "nav-item">
-              <a href = "blog.html" class = "nav-link">blog</a>-->
-            </li>
+            <!-- <li class = "nav-item">
+              <a href = "blog.html" class = "nav-link">PT. SPA</a>
+            </li> -->
             <li class = "nav-item nav-active">
               <a href = "contact.html" class = "nav-link">contact</a>
             </li>
