--- a/projects.html
+++ b/projects.html
@@ -51,9 +51,9 @@
             <li class = "nav-item nav-active">
               <a href = "projects.html" class = "nav-link">experience</a>
             </li>
-            <!--<li class = "nav-item">
-              <a href = "blog.html" class = "nav-link">blog</a>-->
-            </li>
+           <!--  <li class = "nav-item">
+              <a href = "blog.html" class = "nav-link">PT. SPA</a>
+            </li> -->
             <!--<li class = "nav-item">
               <a href = "contact.html" class = "nav-link">contact</a>-->
             </li>
@@ -86,6 +86,19 @@
             </span>
             <h2>Sertivikat</h2>
             <p class = "text">Alibaba x Code Politan</p>
+          </div>
+        </div>
+
+         <div class = "item">
+          <div class = "item-img">
+            <img src = "assets/Kominfo_001.png" alt = "blog image">
+          </div>
+          <div class = "item-content">
+            <span>Februari 22, 2021
+              <i class = "fas fa-certificate"></i> 
+            </span>
+            <h2>Sertivikat</h2>
+            <p class = "text">Kominfo x Progate</p>
           </div>
         </div>
 
@@ -244,7 +257,36 @@
             <p class = "text">Progate.id</p>
           </div>
         </div>
+
+        <div class = "item">
+          <div class = "item-img">
+            <img src = "assets/Vaksin1.png" alt = "blog image">
+          </div>
+          <div class = "item-content">
+            <span>Februari 22, 2021
+              <i class = "fas fa-certificate"></i> 
+            </span>
+            <h2>Sertivikat</h2>
+            <p class = "text">VAKSIN COVID-19</p>
+          </div>
+        </div>
+
+        <div class = "item">
+          <div class = "item-img">
+            <img src = "assets/Vaksin2.png" alt = "blog image">
+          </div>
+          <div class = "item-content">
+            <span>Februari 22, 2021
+              <i class = "fas fa-certificate"></i> 
+            </span>
+            <h2>Sertivikat</h2>
+            <p class = "text">VAKSIN COVID-19</p>
+          </div>
+        </div>
+
       </section>
+
+     
  
     <!-- end of projects page -->
 
