--- a/resume.html
+++ b/resume.html
@@ -49,9 +49,9 @@
             <li class = "nav-item">
               <a href = "projects.html" class = "nav-link">experience</a>
             </li>
-            <!--<li class = "nav-item">
-              <a href = "blog.html" class = "nav-link">blog</a>-->
-            </li>
+            <!-- <li class = "nav-item">
+              <a href = "blog.html" class = "nav-link">PT. SPA</a>
+            </li> -->
             <!--<li class = "nav-item">
               <a href = "contact.html" class = "nav-link">contact</a>-->
             </li>
@@ -77,20 +77,20 @@
           <div class = "icon">
             <i class = "fas fa-briefcase"></i>
           </div>
-          <span>2020 - Now</span>
+          <span>2020 - 2021 </span>
           <h2>Teacher of High School, Instalasi Software <span></span></h2>
-          <p class = "text">Keseharian saya bekerja sebagai guru komputer di SMK barlind school, dan memiliki pekerjaan sampingan menerima jasa instalasi software</p>
+          <p class = "text">Bekerja sebagai guru komputer di SMK barlind school, dan memiliki pekerjaan sampingan menerima jasa instalasi software</p>
         </div>
 
-        <!-- <div class = "item">
+        <div class = "item">
           <div class = "icon">
-            <i class = "fas fa-graduation-cap"></i>
+            <i class = "fas fa-briefcase"></i>
           </div>
-          <span>2015</span>
-          <h2>computer engineering - <span>MIT</span></h2>
-          <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit non porro nisi, vitae accusamus sapiente!</p>
+          <span>2021 - NOW</span>
+          <h2>Administrasi <span></span></h2>
+          <p class = "text">Administrasi peralatan di suatu perusahaan kontraktor yang bernama PT.Sabaritha Perkasa Abadi</p>
         </div>
-
+<!--
        <div class = "item">
           <div class = "icon">
             <i class = "fas fa-briefcase"></i>
